--- a/index.html
+++ b/index.html
@@ -1,32 +1,74 @@
-
-<html>
+<html lang="pt-br">
 
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <title>JOHANSENFLIX</title>
 </head>
 
 
 <body>
 
-<header>JOHANSENFLIX</header>
+    <header>JOHANSENFLIX</header>
 
-#filmes para família
+    <p class="filmes">#filmes para família</p>
+
+    <section>
+        <div class="chamada-texto">
+            <h1 class="Sempre">Sempre Ao Seu Lado - Dublado. Filme completo em Hd.</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/2w4jpyFE3os?si=vgxPilKUOmCe56xM"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 
-<div>
-<h1>Sempre Ao Seu Lado - Dublado. Filme completo em Hd.</h1>
+    <section>
+        <div>
+            <h1 class="domingo">Que tal passar a tarde de domingo assistindo um filme com a família?</h1>
+            <p class="acesse">Acesse esse video logo aqui embaixo</p>
+        </div>
+    </section>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2w4jpyFE3os?si=vgxPilKUOmCe56xM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <section>
+        <div>
+            <h1>FILMES ÓTIMOS para ver COM TODA FAMÍLIA!</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4RsSttBZUNA?si=bI8Ad8k1q6QhL8AZ"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-<h1>Que tal passar a tarde de domingo assistindo um filme com a família?</h1>
-<p>Acesse esse video logo aqui embaixo</p>
-</div>
 
-<h1>FILMES ÓTIMOS para ver COM TODA FAMÍLIA!</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4RsSttBZUNA?si=bI8Ad8k1q6QhL8AZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <section>
+        <h2>filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=0qYyI-7vPDM">
+            <img src="https://img.youtube.com/vi/0qYyI-7vPDM/maxresdefault.jpg" />
+        </a>
 
+        <a href="https://www.youtube.com/watch?v=fObjXsafJX0">
+            <img src="https://img.youtube.com/vi/fObjXsafJX0/maxresdefault.jpg" />
+        </a>
+        
+        <a href="https://www.youtube.com/watch?v=ypwhqPTjem4">
+            <img src="https://img.youtube.com/vi/ypwhqPTjem4/maxresdefault.jpg" />
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=evPyksgZyZ4">
+            <img src="https://img.youtube.com/vi/evPyksgZyZ4/maxresdefault.jpg" />
+        </a>
+
+    
+        </div>
+    </section>
 
 </body>
 
